--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Nao Receipts</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -11,6 +11,7 @@
   <div class="container">
     <h1 class="mt-5">Welcome to the POS Receipts Application</h1>
     <p class="lead">This application allows you to view and print various types of receipts.</p>
+    <a href="https://github.com/KIDDO702/pos-recipts.git" target="_blank">github</a>
     <ul class="list-group mt-3">
       <li class="list-group-item">
         <a href="invoice.html" target="_blank" class="btn btn-sm btn-primary">View Invoice Receipt</a>
